Flask api working

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,10 @@
         <h1 class="mb-4">Welcome to the Movie Recommendation System</h1>
         <p>Choose how you want to get movie recommendations:</p>
         <ul class="list-group">
-            <li class="list-group-item"><a href="reretitle.html">By Movie Title</a></li>
-            <li class="list-group-item"><a href="reregenre.html">By Genre</a></li>
+            <!-- <li class="list-group-item"><a href="reretitle.html">By Movie Title</a></li>
+            <li class="list-group-item"><a href="reregenre.html">By Genre</a></li> -->
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/title">By Movie Title</a></li>
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/genre">By Genre</a></li>
         </ul>
     </div>
 
