--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <li class="list-group-item"><a href="reregenre.html">By Genre</a></li> -->
             <li class="list-group-item"><a href="http://127.0.0.1:5000/title">By Movie Title</a></li>
             <li class="list-group-item"><a href="http://127.0.0.1:5000/genre">By Genre</a></li>
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/recommendation_engine">Recommendation Engine</a></li>
         </ul>
     </div>
 
