--- a/templates/rec_engine.html
+++ b/templates/rec_engine.html
@@ -5,7 +5,10 @@
         <title>Title</title>
     </head>
     <body>
-        <h3>This is from app</h3>
-        {{ result }}
+        <h3>Recommended Movies:</h3>
+        <!-- <h3>{{ recs }}</h3> -->
+        {% for rec in recs %}
+            <h4>{{ rec }}</h4>
+        {% endfor %}
     </body>
 </html>
