--- a/templates/reretitle.html
+++ b/templates/reretitle.html
@@ -17,7 +17,7 @@
 
 <header class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html">
-        <img src="header_logo.png" alt="Your Logo" height="40">
+        <img src="../static/css/header_logo.png" alt="Your Logo" height="40">
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
