--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,23 +59,23 @@ button {
 .suggestion {
     cursor: pointer;
     padding: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffd15b;
     border-radius: 5px;
     margin: 5px;
     display: inline-block;
     background-color: #fff; /* Set suggestion box background color */
-    color: #000; /* Set suggestion box text color */
+    color: #155263; /* Set suggestion box text color */
 }
 
 .matching-movie {
     cursor: pointer;
     padding: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffd15b;
     border-radius: 5px;
     margin: 5px;
     display: table;
     background-color: #fff; /* Set suggestion box background color */
-    color: #000; /* Set suggestion box text color */
+    color: #155263; /* Set suggestion box text color */
     margin: 0 auto;
 
 }
@@ -111,7 +111,7 @@ button {
     position: absolute; /* Make it absolute positioned so it doesn't affect the document flow */
     display: none; /* Initially hide the modal box */
     background-color: white;
-    border: 1px solid #ccc;
+    border: 20px solid #ffd15b;
     padding: 20px;
     z-index: 10;
 }
@@ -126,7 +126,7 @@ button {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 5px solid #ffd15b;
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
@@ -166,3 +166,97 @@ button {
 #matching-genres-container strong {
     color: white; /* Set the text color to white for the specific element */
 }
+
+/* Customize the logo size and color */
+.navbar-brand img {
+    height: 70px; /* Adjust the height as needed */
+    width: auto; /* Maintain the aspect ratio */
+    filter: brightness(1); /* Adjust brightness for color enhancement */
+}
+
+/* Customize the background color of the navigation bar */
+.navbar {
+    background-color: #ffd15b !important; /* Set your desired background color */
+    height: 70px; /* Set the desired height */
+}
+
+/* Customize the color of the navigation links */
+.navbar-nav .nav-link {
+    color: #333333; /* Set your desired text color */
+}
+
+/* Change the color on hover for better interactivity */
+.navbar-nav .nav-link:hover {
+    color: #ff9900; /* Set your desired hover text color */
+}
+
+/* Add custom styles for the card */
+.card {
+    border: 5px solid #155263; /* Add a border */
+    border-radius: 10px; /* Add border-radius for rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+    width: 600px; /* Set the desired width */
+    margin: 0 auto; /* Center the card horizontally */
+}
+
+.card-body {
+    
+    padding: 20px; /* Add padding to the card body */
+}
+
+.card-text {
+    color: #155263;
+    font-size: 18px; /* Adjust the font size for the card text */
+}
+
+.list-group-item {
+    color: #155263;
+
+}
+
+.randomMovie{
+    color: white;
+}
+
+/* Style for the reload button */
+.btn-reload {
+    background-color: #ffd15b; /* Button background color (Bootstrap primary color) */
+    color: #155263; /* Button text color (white) */
+    border: none; /* Remove border */
+    padding: 10px 20px; /* Add padding to the button */
+    cursor: pointer; /* Change cursor to pointer on hover */
+    border-radius: 5px; /* Add rounded corners */
+}
+
+/* Hover effect */
+.btn-reload:hover {
+    background-color: #ffd15b; /* Darker background color on hover */
+    filter: brightness(.7);
+}
+
+.btn-group {
+    display: inline-block;
+    margin-right: 30px; /* Increase the spacing between buttons*/
+    margin-bottom: 10px;
+  }
+  
+  .btn {
+    padding: 10px 20px; /* Increase button padding for a more prominent look*/
+    border: 2px solid #007bff; /* Change button border color to blue*/
+    border-radius: 10px; /* Change button border radius to a rounder style*/
+    background-color: #fff; /* Change button background color to white*/
+    font-weight: bold; /* Make button text bolder*/
+  }
+  
+  .btn:focus, .btn:hover {
+    background-color: #e6f4ff; /* Change button hover color to a lighter shade of blue*/
+    border-color: #007bff; /* Maintain consistent border color on hover*/
+  }
+  
+  .yes-btn {
+    background-color: #28a745; /* Change the "Yes" button color to green*/
+  }
+  
+  .no-btn {
+    background-color: #dc3545; /* Change the "No" button color to red*/
+  }
