--- a/templates/reretitle.html
+++ b/templates/reretitle.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../static/css/styles.css">
 
     <!-- Add the link to the generated JavaScript file -->
-    <script src="movie_data.js"></script>
+    <script src="../static/js/movie_data.js"></script>
 </head>
 
 <header class="navbar navbar-expand-lg navbar-light bg-light">
