--- a/templates/random.html
+++ b/templates/random.html
@@ -9,10 +9,10 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 
     <!-- Add the link to the generated JavaScript file -->
-    <script src="movie_data.js"></script>
+    <script src="../static/js/movie_data.js"></script>
 </head>
 <body class="bg-light">
 
