Fixed button to return to main menu

--- a/templates/random.html
+++ b/templates/random.html
@@ -17,7 +17,7 @@
 <body class="bg-light">
 
     <header class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">
             <img src="../static/css/header_logo.png" alt="Your Logo" height="40">
         </a>
 
