--- a/templates/rec_engine.html
+++ b/templates/rec_engine.html
@@ -16,7 +16,7 @@
 </head>
 
 <header class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="http://127.0.0.1:5000/">
         <img src="../static/css/header_logo.png" alt="Your Logo" height="40">
     </a>
 
