--- a/templates/rec_engine.html
+++ b/templates/rec_engine.html
@@ -36,10 +36,12 @@
         </ul>
     </div>
 </header>
-    <body>
+<body>
+    <div class="movie-recs">
         <h3>Recommended Movies:</h3>
         {% for rec in recs %}
             <h4>{{ rec }}</h4>
         {% endfor %}
-    </body>
+    </div>
+</body>
 </html>
