Fixed button links

--- a/templates/random.html
+++ b/templates/random.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="Yes_No.html">Yes or No?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="reretitle.html">By Title</a>
+                    <a class="nav-link" href="http://127.0.0.1:5000/title">By Title</a>
                 </li>
                 <!-- Add more pages as needed -->
             </ul>
