--- a/templates/rec_engine.html
+++ b/templates/rec_engine.html
@@ -27,10 +27,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="Yes_No.html">Yes or No?</a>
+                <a class="nav-link" href="http://127.0.0.1:5000/recommendation_engine">Yes or No?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="random.html">Random</a>
+                <a class="nav-link" href="http://127.0.0.1:5000/random">Random</a>
             </li>
             <!-- Add more pages as needed -->
         </ul>
