--- a/templates/random.html
+++ b/templates/random.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="Yes_No.html">Yes or No?</a>
+                    <a class="nav-link" href="http://127.0.0.1:5000/recommendation_engine">Yes or No?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://127.0.0.1:5000/title">By Title</a>
